<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_final_image"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.mpv.canvasexample.FinalImage">

    <LinearLayout
        android:id="@+id/firstlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/final_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/theam_big1"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/thiredlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/gallery_strip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20.0dip"
            android:text="@string/save" />

        <Button
            android:id="@+id/share_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />
    </LinearLayout>
</LinearLayout>

